# via-alias

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  dockerfile
.github/workflows/: build-image.yml  ci.yml
docs/: index.html  openapi.json
migrations/: 20260210211430_initial_schema.sql  20260224185147_add_user_table.sql  20260226195045_add_owner_column_to_user_table.sql  20260306120541_change_redirect_id_to_text.sql
src/: api_doc.rs  controller.rs  data.rs  lib.rs  main.rs  middleware.rs  model.rs  service.rs  telemetry.rs
src/controller/: admin.rs  health_check.rs  login.rs  metrics.rs  redirect.rs  user.rs
src/data/: error.rs  redirect_repo.rs  sqlite_service.rs  user_registration_token_repo.rs  user_repo.rs  validator.rs
src/middleware/: auth_middleware.rs  metrics_middleware.rs
src/model/: redirect.rs  redirect_dto.rs  user.rs
src/service/: error.rs  login_service.rs  redirect_service.rs  user_service.rs  validator.rs
