[package]
name = "via-alias"
version = "0.1.1"
edition = "2024"

[dependencies]
async-trait = "0.1.85"
axum = { version = "0.8.1", features = ["http2", "macros"] }
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["macros", "runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1.43.0", features = ["full"] }

[profile.release]
opt-level = 3
