[package]
name = "via-alias"
version = "0.1.1"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["http2", "macros"] }
serde = { version = "1.0.218", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["macros", "runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1.49.0", features = ["signal", "rt-multi-thread"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
