[package]
name = "via-alias"
version = "0.1.11"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["password-hash", "std"] }
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["http2", "macros"] }
serde = { version = "1.0.218", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["macros", "runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1.49.0", features = ["signal", "rt-multi-thread"] }
uuid = { version = "1.21.0", features = ["v4"] }
base64 = "0.22.1"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
tokio-util = "0.7.18"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
clap = { version = "4.6.0", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
